--- a/lib/bower.json
+++ b/lib/bower.json
@@ -1,7 +1,7 @@
 {
-  "name": "angular-music-history",
-  "version": "0.0.0",
-  "homepage": "https://github.com/JediTagger/angular-music-history",
+  "name": "WhatChuGitN",
+  "version": "1.0.0",
+  "homepage": "https://github.com/JediTagger/whatchugitn",
   "authors": [
     "Jesse Turner <jesseturner@comcast.net>"
   ],
