--- a/lib/bower.json
+++ b/lib/bower.json
@@ -23,6 +23,8 @@
     "q": "~1.0.1",
     "angular": "~1.4.4",
     "angular-route": "~1.4.4",
-    "angularfire": "~1.1.2"
+    "angularfire": "~1.1.2",
+    "angular-filter": "~0.5.5",
+    "oauth-js": "~0.4.3"
   }
 }
